<resources>
    <string name="app_name">VMA</string>
    <string name="vet_title_hint">Enter a title for the visit.</string>
    <string name="vet_title_label">Title</string>
    <string name="vet_details_label">Details</string>
    <string name="vet_solved_label">Solved</string>
    <string name="visit_title">Visit Title</string>
    <string name="visit_date">Visit Date</string>
    <string name="date_picker">Date of visit: </string>
    <string name="new_visit">New Visit</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="subtitle_format">%1d crimes</string>
    <string name="enter_a_ditals">Enter a ditals</string>
    <string name="owner_text">Choose Owner</string>
    <string name="visit_report_text">Send Visit Report</string>
    <string name="visit_report">%1$s!
        The visit was on %2$s. %3$s, and %4$s
    </string>
    <string name="visit_report_solved">The case is solved</string>
    <string name="visit_report_unsolved">The case is not solved</string>
    <string name="visit_report_no_owner">there is no owner at home</string>
    <string name="visit_report_owner_regected">the %s regect vet service</string>
    <string name="visit_report_owner">the owner is %s.</string>
    <string name="visit_report_subject">Veterinary Visit Report</string>
    <string name="send_report">Send visit report via</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1d crime</item>
        <item quantity="other">%1d crimes</item>
    </plurals>
</resources>
