<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vet_title_label"
        />

    <EditText
        android:id="@+id/vet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:hint="@string/vet_title_hint"
        android:inputType="textShortMessage" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vet_details_label"
        />

    <EditText
        android:id="@+id/vet_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_ditals"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/vet_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/vet_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vet_solved_label"/>

    <Button
        android:id="@+id/animal_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner_text" />

    <Button
        android:id="@+id/visit_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_report_text" />

</LinearLayout>